--- a/model.ipynb
+++ b/model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras import optimizers, losses, callbacks\n",
+    "from tensorflow.keras import optimizers, losses\n",
     "\n",
     "# Define the evaluation function model\n",
     "def create_evaluation_model():\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,13 +105,6 @@
     "            features[131] = -1.0\n",
     "    \n",
     "    return features\n",
-    "    \n",
-    "def is_forced_mate(eval_score, color):\n",
-    "    if color == chess.WHITE and eval_score >= 4000:\n",
-    "        return True\n",
-    "    elif color == chess.BLACK and eval_score <= -4000:\n",
-    "        return True\n",
-    "    return False    \n",
     "\n",
     "def calculate_king_safety(board, color):\n",
     "    king_square = board.king(color)\n",
@@ -128,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +137,7 @@
     "    return False\n",
     "\n",
     "# Read training data from CSV\n",
-    "training_data = pd.read_csv('/kaggle/input/chesstraindata/chessData-10L.csv')\n",
+    "training_data = pd.read_csv('C:\\Desktop\\IITB_SoC_Deep_Carlsen\\Training Data\\chessData-10L.csv')[:500001]\n",
     "\n",
     "# Convert training data to feature vectors\n",
     "training_positions = []\n",
@@ -162,9 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 1.02 GiB for an array with shape (1038901, 132) and data type float64",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 9\u001b[0m\n\u001b[0;32m      2\u001b[0m model \u001b[39m=\u001b[39m create_evaluation_model()\n\u001b[0;32m      4\u001b[0m \u001b[39m# Define the ProgbarLogger callback\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39m#progbar_logger = keras.callbacks.ProgbarLogger()\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \n\u001b[0;32m      7\u001b[0m \u001b[39m# Fit the model with the ProgbarLogger callback\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39m#model.fit(np.array(training_positions), np.array(training_scores), epochs=500, batch_size=1048575, callbacks=[progbar_logger])\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m model\u001b[39m.\u001b[39mfit(np\u001b[39m.\u001b[39;49marray(training_positions), np\u001b[39m.\u001b[39marray(training_scores), epochs\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m, batch_size\u001b[39m=\u001b[39m\u001b[39m210\u001b[39m)\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 1.02 GiB for an array with shape (1038901, 132) and data type float64"
+     ]
+    }
+   ],
    "source": [
     "# Create and train the evaluation function model\n",
     "model = create_evaluation_model()\n",
@@ -174,19 +179,7 @@
     "\n",
     "# Fit the model with the ProgbarLogger callback\n",
     "#model.fit(np.array(training_positions), np.array(training_scores), epochs=500, batch_size=1048575, callbacks=[progbar_logger])\n",
-    "model.fit(np.array(training_positions), np.array(training_scores), epochs=35, batch_size=20972)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save and load the model\n",
-    "model.save('DeepCarlsen.h5')\n",
-    "#model = keras.models.load_model('my_model.h5')\n",
-    "model = keras.models.load_model('DeepCarlsen.h5')"
+    "model.fit(np.array(training_positions), np.array(training_scores), epochs=10, batch_size=210)"
    ]
   },
   {
@@ -197,7 +190,7 @@
    "source": [
     "# Test example\n",
     "test_example = 'r2q1rk1/p1p1bppp/2p2n2/3p2B1/4P1b1/2NB1Q2/PPP2PPP/2KR3R w - - 8 11'\n",
-    "# A position from a game played by me as black with eval = -1.17, although both side have equal values of pieces\n",
+    "# A position from a game played by me as black with eval = -1.17, although both side have equal values of pieces (material)\n",
     "\n",
     "# Convert test example to feature vector\n",
     "test_position = fen_to_features(test_example)\n",
@@ -215,49 +208,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def minimax(position, depth, maximizing_player, evaluate_position):\n",
-    "    if depth == 0 or position.is_game_over():\n",
-    "        return evaluate_position(model, position)\n",
-    "    \n",
-    "    if maximizing_player:\n",
-    "        max_eval = float('-inf')\n",
-    "        for move in position.legal_moves:\n",
-    "            position.push(move)\n",
-    "            eval_score = minimax(position, depth - 1, False, evaluate_position)\n",
-    "            position.pop()\n",
-    "            max_eval = max(max_eval, eval_score)\n",
-    "        return max_eval\n",
-    "    else:\n",
-    "        min_eval = float('inf')\n",
-    "        for move in position.legal_moves:\n",
-    "            position.push(move)\n",
-    "            eval_score = minimax(position, depth - 1, True, evaluate_position)\n",
-    "            position.pop()\n",
-    "            min_eval = min(min_eval, eval_score)\n",
-    "        return min_eval\n",
+    "# Function to generate the best move based on the given FEN ID and evaluation score\n",
+    "def generate_best_move(fen, eval_score, model, depth=2):\n",
+    "    board = chess.Board(fen)\n",
+    "    color = board.turn\n",
     "\n",
+    "    # Get all legal moves from the given position\n",
+    "    legal_moves = list(board.legal_moves)\n",
     "\n",
-    "def choose_best_move(position, depth):\n",
+    "    # Initialize the best move and its corresponding evaluation score\n",
     "    best_move = None\n",
-    "    best_eval = float('-inf')\n",
-    "    for move in position.legal_moves:\n",
-    "        position.push(move)\n",
-    "        eval_score = minimax(position, depth - 1, False, evaluate_position)\n",
-    "        position.pop()\n",
-    "        if eval_score > best_eval:\n",
-    "            best_eval = eval_score\n",
-    "            best_move = move\n",
+    "    best_eval = float('-inf') if color == chess.WHITE else float('inf')\n",
+    "\n",
+    "    # Iterate through each legal move\n",
+    "    for move in legal_moves:\n",
+    "        # Make the move on a temporary board\n",
+    "        temp_board = board.copy()\n",
+    "        temp_board.push(move)\n",
+    "\n",
+    "        # Convert the temporary board to feature vector\n",
+    "        temp_features = fen_to_features(temp_board.fen())\n",
+    "\n",
+    "        # Calculate the evaluation score for the temporary board\n",
+    "        temp_eval = model.predict(np.array([temp_features]))[0][0]\n",
+    "\n",
+    "        # If it is the white player's turn, maximize the evaluation score\n",
+    "        if color == chess.WHITE:\n",
+    "            if temp_eval > best_eval:\n",
+    "                best_eval = temp_eval\n",
+    "                best_move = move\n",
+    "        # If it is the black player's turn, minimize the evaluation score\n",
+    "        else:\n",
+    "            if temp_eval < best_eval:\n",
+    "                best_eval = temp_eval\n",
+    "                best_move = move\n",
+    "\n",
     "    return best_move\n",
     "\n",
-    "# Example usage\n",
-    "best_move = choose_best_move(test_position, depth=3)\n",
-    "print(\"Best Move :\", best_move)\n"
+    "# Usage example\n",
+    "# Assuming 'model' is the trained evaluation function model\n",
+    "# fen_id = 'r1bqk2r/pppp1ppp/2nb4/4p3/3PP3/2N5/PPP2PPP/R1BQKBNR w KQkq - 1 7'\n",
+    "# eval_score = 0.5  # Replace with the actual evaluation score from the evaluation function\n",
+    "best_move = generate_best_move(test_example, evaluation_score, model)\n",
+    "\n",
+    "print('Best Move:', best_move)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save and load the model\n",
+    "model.save('DeepCarlsen.h5')\n",
+    "model = keras.models.load_model('my_model.h5')\n",
+    "model = keras.models.load_model('DeepCarlsen.h5')"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
